<resources>
    <string name="app_name">BoozeBuddy</string>
    <string name="title_activity_safety">safety</string>
    <string name="title_activity_contact_view">ContactView</string>
    <string name="profile">Profile</string>
    <string name="diary">DIARY</string>
    <string name="party_mode">PARTY MODE</string>
    <string name="progress">PROGRESS</string>
    <string name="drunk_dial">DRUNK DIAL</string>
    <string name="my_drinks">My Drinks</string>
    <string name="search_a_drink">Search a Drink</string>
    <string name="search">Search</string>
    <string name="edit_information">Edit Information</string>
    <string name="name">Name</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="edit_contacts">Edit Contacts</string>
    <string name="save_information">Save Information</string>
    <string name="add_drink">Add Drink</string>
    <string name="main_menu">Main Menu</string>
    <string name="drink_name">Drink Name</string>
    <string name="brand_name">Brand Name</string>
    <string name="cal">Cal</string>
    <string name="serving_size">Serving Size:</string>
    <string name="number_of_servings">Number of servings:</string>
    <string name="calories">Calories</string>
    <string name="view_blocked">view blocked</string>
    <string name="title_activity_drunk_dial">DrunkDial</string>
    <string name="title_activity_send_text">SendText</string>
    <string name="start">Start</string>
    <string name="time_spent_partying">Time Spent Partying</string>
    <string name="add_message">Add Message</string>
    <string name="title_activity_msgedit">msgedit</string>
    <string name="save">Save</string>
    <string name="menu_checkbox_undo">Undo</string>
    <string name="menu_add_5_items">Add 5 items</string>
    <string name="button_undo">undo</string>
    <string name="show_notification_details_here">Show Notification Details Here...</string>
    <string name="title_activity_cocktail">cocktail</string>
    <string name="title_activity_alarm">alarm</string>
    <string name="title_activity_ringtone_playing_service">RingtonePlayingService</string>
</resources>
