<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:weightSum="1">

    <Button
        android:id="@+id/button12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_contacts"
        android:onClick="editcontacts"
        android:background="@drawable/background_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="401dp"
        android:orientation="horizontal"
        android:layout_weight="1.07">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameedit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="25sp"
                android:text = "@string/name"/>

            <TextView
                android:id="@+id/weightedit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="25sp"
                android:inputType="number"
                android:text="@string/weight"/>


            <TextView
                android:id="@+id/ageedit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="25sp"
                android:inputType="number"
                android:text = "@string/age"/>

            <TextView
                android:id="@+id/sexedit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="25sp"
                android:text = "@string/sex"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true"/>

            <EditText
                android:id="@+id/weightval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:layout_weight="1"
                android:selectAllOnFocus="true"/>


            <EditText
                android:id="@+id/ageval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:layout_weight="1"
                android:selectAllOnFocus="true"/>

            <Spinner
                android:id="@+id/sexval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_weight="1"
                android:selectAllOnFocus="true"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/saveinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="saveinfo"
        android:text="@string/save_information"
        android:background="@drawable/background_color"/>

</LinearLayout>